# graphics-haskell

./: .gitignore  cabal.project  flake.nix
graphics-core/: graphics-core.cabal
graphics-core/shape-visualizer/: Main.hs
graphics-core/spectrum-viewer/: Main.hs
graphics-core/src/Geometry/: Barycentric.hs  Bounds.hs  Interaction.hs  Normal.hs  Parametric.hs  Ray.hs  Shape.hs  Spherical.hs  Transform.hs
graphics-core/src/Geometry/Shape/: Cylinder.hs  Disk.hs  Sphere.hs  Triangle.hs
graphics-core/src/Graphics/: Color.hs
graphics-core/src/Graphics/Rendering/: Film.hs  Filter.hs  Sensor.hs
graphics-core/src/Graphics/Rendering/Film/: RGB.hs
graphics-core/src/Linear/: Approximate.hs
graphics-core/src/Linear/Affine/: Arbitrary.hs
graphics-core/src/Linear/V2/: Arbitrary.hs
graphics-core/src/Math/: Vector.hs
graphics-core/src/Numeric/: FMA.hs
graphics-core/src/Numeric/Interval/: IEEE.hs
graphics-core/src/Physics/: Spectrum.hs
graphics-core/src/Physics/Spectrum/: Add.hs  Blackbody.hs  Class.hs  Histogram.hs  Interpolated.hs  Mul.hs  RGB.hs  Sampled.hs
graphics-core/test/Geometry/: BoundsSpec.hs  ShapeSpec.hs
graphics-core/test/Geometry/Shape/: SphereSpec.hs
graphics-core/test/Linear/V2/: ArbitrarySpec.hs
integration-monte-carlo/: integration-monte-carlo.cabal
integration-monte-carlo/src/Numeric/Integration/: MonteCarlo.hs
integration-monte-carlo/src/Statistics/: Distribution2.hs
integration-monte-carlo/src/Statistics/Distribution/: Linear.hs  Transform.hs
integration-monte-carlo/src/Statistics/Distribution2/: Bilinear.hs  UniformSphere.hs
integration-monte-carlo/test/Statistics/Distribution/: LinearSpec.hs
integration-monte-carlo/test/Statistics/Distribution2/: BilinearSpec.hs  UniformSphereSpec.hs
integration-monte-carlo/test/Test/QuickCheck/Classes/Statistics/: Distribution.hs
nix/: project.nix  shell.nix
statistics-geometry/: statistics-geometry.cabal
statistics-geometry/src/Statistics/Distribution/: Data.hs  Linear.hs
statistics-geometry/src/Statistics/Distribution2/: Bilinear.hs  UniformCone.hs  UniformDisk.hs  UniformSphere.hs
statistics-geometry/test/Statistics/Distribution2/: BilinearSpec.hs  UniformConeSpec.hs  UniformDiskSpec.hs  UniformSphereSpec.hs
statistics-geometry/test/Test/Hspec/QuickCheck/: Classes.hs
statistics-geometry/test/Test/QuickCheck/Classes/Statistics/: Distribution2.hs
