cabal-version: 3.4
name:          graphics-core
version:       0.1.0.0
synopsis:      Core data types and algorithms for Haskell graphics
author:        Jamie Bertram
maintainer:    Jamie Bertram
copyright:     2024 Jamie Bertram
license:       MIT
license-file:  LICENSE
build-type:    Simple

common base
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wunused-packages -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          base
  exposed-modules:
    Geometry.Bounds
    Geometry.Interaction
    Geometry.Normal
    Geometry.Parametric
    Geometry.Ray
    Geometry.Shape
    Geometry.Shape.Cylinder
    Geometry.Shape.Sphere
    Geometry.Spherical
    Geometry.Transform
    Graphics.Color
    Linear.Affine.Arbitrary
    Linear.Approximate
    Linear.V2.Arbitrary
    Numeric.Interval.IEEE
    Physics.Spectrum

  other-modules:   Paths_graphics_core
  hs-source-dirs:  src
  build-depends:
    , ad
    , base
    , comonad
    , containers
    , distributive
    , ieee
    , integration-monte-carlo
    , lens
    , linear
    , linear-tests
    , nonlinear-optimization
    , poly
    , primitive
    , QuickCheck
    , random
    , reflection
    , semigroupoids
    , statistics-geometry
    , template-haskell
    , vector

executable spectrum-viewer
  import:             base
  hs-source-dirs:     spectrum-viewer
  main-is:            Main.hs
  build-depends:
    , base
    , graphics-core
    , hashable
    , JuicyPixels
    , linear
    , poly

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -fspecialise-aggressively

test-suite graphics-core-test
  import:             base
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Geometry.BoundsSpec
    Geometry.Shape.SphereSpec
    Geometry.ShapeSpec
    Linear.V2.ArbitrarySpec
    Paths_graphics_core
    Test.Hspec.QuickCheck.Classes

  build-depends:
    , base
    , graphics-core
    , hspec
    , ieee
    , lens
    , linear
    , QuickCheck
    , quickcheck-classes
    , random
    , statistics-geometry

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded
