cabal-version: 3.4
name:          statistics-geometry
version:       0.1.0.0
synopsis:      Statistical distributions over geometric primatives
author:        Jamie Bertram
maintainer:    Jamie Bertram
copyright:     2024 Jamie Bertram
license:       MIT
build-type:    Simple

common base
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wunused-packages -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          base
  exposed-modules:
    Statistics.Distribution.Linear
    Statistics.Distribution2
    Statistics.Distribution2.Bilinear
    Statistics.Distribution2.UniformCone
    Statistics.Distribution2.UniformSphere

  other-modules:   Paths_statistics_geometry
  hs-source-dirs:  src
  build-depends:
    , base
    , comonad
    , lens
    , linear
    , profunctors
    , QuickCheck
    , random
    , statistics
    , vector

test-suite statistics-geometry-test
  import:             base
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_statistics_geometry
    Statistics.Distribution.LinearSpec
    Statistics.Distribution2.BilinearSpec
    Statistics.Distribution2.UniformConeSpec
    Statistics.Distribution2.UniformSphereSpec
    Test.Hspec.QuickCheck.Classes
    Test.QuickCheck.Classes.Statistics.Distribution
    Test.QuickCheck.Classes.Statistics.Distribution2

  build-depends:
    , base
    , hspec
    , ieee
    , linear
    , QuickCheck
    , quickcheck-classes
    , statistics
    , statistics-geometry

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded
